[gd_scene load_steps=8 format=2]

[ext_resource path="res://chat/chat_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://shattered-glass-texture.png" type="Texture" id=2]
[ext_resource path="res://chat/chat_header.tscn" type="PackedScene" id=3]
[ext_resource path="res://chat/chat.gd" type="Script" id=4]
[ext_resource path="res://chat/side_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://blood-png-7140.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.15, 0.15, 0.15, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChatContainer" parent="." instance=ExtResource( 1 )]
margin_left = 9.0
margin_top = 100.0
chat_text_file = "res://scripts/main_chat_ru.txt"

[node name="ChatHeader" parent="." instance=ExtResource( 3 )]
mouse_filter = 2

[node name="FadeRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="SidePanel" parent="." instance=ExtResource( 5 )]
margin_left = -430.0
margin_right = -720.0

[node name="CracksForeground" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.341176 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 7

[node name="BloodForeground" type="TextureRect" parent="."]
self_modulate = Color( 0.341176, 0, 0, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[connection signal="header_pressed" from="ChatHeader" to="." method="_on_ChatHeader_header_pressed"]
[connection signal="chat_pressed" from="SidePanel" to="." method="_on_SidePanel_chat_pressed"]
[connection signal="report_pressed" from="SidePanel" to="." method="_on_SidePanel_report_pressed"]
[connection signal="side_panel_dragged" from="SidePanel" to="." method="_on_SidePanel_side_panel_dragged"]
